--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 /.env.development.local
+/.env.test.local
 
 # Ignore bundler config.
 /.bundle
